# platform.core.uifw.ise-engine-sunpinyin

./: AUTHORS  Makefile.am  SConstruct  bootstrap  configure.ac  ise-engine-sunpinyin.xml  project.config
debian/: changelog
packaging/: ise-engine-sunpinyin.spec  sunpinyin.changes  sunpinyin.spec
po/: ChangeLog  POTFILES.in  de.po  fr.po  ja.po  ko.po  nl.po  pa.po  ru_RU.po  update-po.sh  zh_CN.po  zh_HK.po  zh_TW.po
raw/: Makefile.am
src/: Makefile.am
src/ime-core/: Makefile.am  imi_defines.h  imi_view_classic.cpp  userdict.cpp
src/lexicon/: Makefile.am
src/pinyin/: Makefile.am
src/slm/: Makefile.am
wrapper/scim/: Makefile.am
wrapper/scim/data/: Makefile.am
wrapper/scim/src/: Makefile.am  sunpinyin_imengine.cpp  sunpinyin_imengine.h
wrapper/xim/: preferences.c
